fixed some bugs

--- a/Lab4/Lab1Template 11/templates/index.html
+++ b/Lab4/Lab1Template 11/templates/index.html
@@ -32,7 +32,7 @@
           <div id= "#div-buttons"><h4>Click The Buttons!</h4></div>
 					<div class="inner cover">
 						<h1 class="cover-heading">CIS*3210 Lab 1</h1>
-
+			<div id="welcome"></div>
             <form id="login" class="form-login" role="form">
             <input type="text" name="username" class="textbox" id="user" placeholder="username" />
 						<br>
@@ -41,9 +41,11 @@
 
 						<input type="button" value="submit" id="submit-button" />
 					</form>
+						<input type="button"  value="logout" style="display: none" id="logout-button" />
 
             <br>
 			<div id="button-group">
+
             <a href="#" id="get-button" class="btn btn-lg btn-info">Get</a>
 
             <a href="#" id="post-button" class="btn btn-lg btn-info">Post</a>
