修改数据接口为腾讯疫情数据接口

--- a/python+flask实现全国+全球疫情数据可视化/项目源码/epidemic/templates/main.html
+++ b/python+flask实现全国+全球疫情数据可视化/项目源码/epidemic/templates/main.html
@@ -23,12 +23,12 @@
         <div class="txt"><h2>累计确诊</h2></div>
         <div class="txt"><h2>累计治愈</h2></div>
         <div class="txt"><h2>累计死亡</h2></div>
-        <div class="txt"><h2>新增死亡</h2></div>
+        <div class="txt"><h2>现存确诊</h2></div>
 
     </div>
-    <div id="c2">我是中2</div>
-    <div id="r1">我是右1</div>
-    <div id="r2">我是右2</div>
+    <div id="c2">大屏中间第二幅图——中国疫情地图</div>
+    <div id="r1">大屏右侧第一幅图——全球确诊top5国家</div>
+    <div id="r2">大屏中间第二幅图——世界疫情地图</div>
     <script src="../static/js/ec_c2.js"></script>
     <script src="../static/js/controller.js"></script>
     <script src="../static/js/ec_l1.js"></script>
